goapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: golang-app
  labels:
    app: golang-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: golang-app
  template:
    metadata:
      labels:
        app: golang-app
    spec:
      containers:
      - name: golang-app
        image: myrachanto/sing:0.0.2
        ports:
          - containerPort: 2200
---
apiVersion: v1
kind: Service
metadata:
  name: golang-app-service
  labels:
    app: golang-app
spec:
  type: ClusterIP
  selector:
    app: golang-app
  ports:
     - port: 2200
       targetPort: 2200
