webapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vue-app
  labels:
    app: vue-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vue-app
  template:
    metadata:
      labels:
        app: vue-app
    spec:
      containers:
      - name: vue-app
        image: myrachanto/frontend:latest
---
apiVersion: v1
kind: Service
metadata:
  name: vue-app-service
spec:  
  type: ClusterIP
  selector:
    app: vue-app
  ports:
     - port: 8081
       targetPort: 8081
